# coding-challenges

./: .editorconfig  README.md
001/java/: P001.java
002/haskell/: 002.hs
002/java/: P002.java
1/c/: 1.c
JavaScript30/01 - JavaScript Drum Kit/: index-START.html
JavaScript30/02 - JS + CSS Clock/: index-START.html
adventofcode/2015/d01/: ChangeLog.md  package.yaml
adventofcode/2015/d02/: ChangeLog.md  package.yaml
adventofcode/2015/d03/: README.md  package.yaml
adventofcode/2016/: CHANGELOG.md  aoc2016.cabal  devbox.json  package.yaml
adventofcode/2016/app/: Main.hs
adventofcode/2016/src/: Day01.hs  Day02.hs  Day03.hs
adventofcode/2017/4/: 4.hs
adventofcode/2018/1/: LICENSE  README.md
adventofcode/2018/2/: package.yaml
adventofcode/2018/3/: :w  (+1 more)
adventofcode/2023/: aoc2023.cabal  devbox.json  package.yaml  stack.yaml
adventofcode/2024/: .gitignore  Cargo.toml  README.md  devbox.json
adventofcode/2024-effect/: .gitignore  .prettierrc  LICENSE  README.md  devbox.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json  tsup.config.ts
adventofcode/2024-haskell/: .gitignore  aoc-template.cabal  package.yaml  shell.nix  stack.yaml
adventofcode/2025/: .gitignore  :w  Cargo.toml  default.nix
adventofcode/2025/.direnv/: nix-profile-pre873727.bce5fe2bb998  nix-profile-pre873727.bce5fe2bb998.rc
adventofcode/2025/src/: main.rs  parser.rs
adventofcode/2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
others/starStruck/: starStruck.hs
others/zipZap/: zipzap.hs
(+266 files in other folders)
