[package]
name = "aoc-template"
version = "2023.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
itertools = "0.12.0"
clap = { version = "4.4.10", features = ["derive"] }
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking"] }
openssl = "0.10.75"
